# getapt

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  tsconfig.json
apts/: admin.py  apps.py  models.py  urls.py  views.py
apts/migrations/: 0001_initial.py  0002_apartment_link.py  0003_costtype_remove_cost_default_price_and_more.py  0004_alter_apartment_costs_alter_cost_type_and_more.py  0005_attribute_predefinedattribute.py  0006_apartment_attributes.py  0007_alter_attribute_name.py
apts/static/apts/css/: index.css
apts/static/apts/js/: index.ts
apts/templates/apts/: index.html
getapt/: asgi.py  settings.py  urls.py  wsgi.py
